[package]
name = "citron_v2"
version = "2.0.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.3", features = ["persistence"] }
egui_extras = { version = "0.34", features = ["svg"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
rfd = "0.17.2"
rodio = { version = "0.22.2", default-features = false, features = ["playback", "wav"] }
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
ureq = { version = "2", features = ["json"] }
tray-icon = "0.24.1"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_Media",
] }
winreg = "0.56.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
